tests/errors/semantics/recursive_struct_trivial.odl
main :: () -> void {
    foo_t :: struct {
        foos: foo_t;
    };

    foo_t.{};
};
